Fix project name in the composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "robomaze/robocloud",
+    "name": "martinhej/robocloud",
     "description": "Robocloud extension of AWS SDK for PHP for use with Kinesis and DynamoDB",
     "type": "library",
     "require": {
