--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
     "description": "Robocloud extension of AWS SDK for PHP for use with Kinesis and DynamoDB",
     "type": "library",
     "require": {
+        "php": "^7.1.3",
         "aws/aws-sdk-php": "^3.30",
-        "php": ">=5.5",
-        "symfony/yaml": "^4.1@dev",
-        "symfony/dependency-injection": "^4.1@dev",
-        "symfony/config": "^4.1@dev",
-        "symfony/event-dispatcher": "^4.1@dev"
+        "symfony/yaml": "^4.0",
+        "symfony/dependency-injection": "^4.0",
+        "symfony/config": "^4.0",
+        "symfony/event-dispatcher": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2@dev",
@@ -20,7 +20,6 @@
             "email": "martin.micuch@yandex.com"
         }
     ],
-    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "robocloud\\": "src/robocloud"
