--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^7.1.3",
         "aws/aws-sdk-php": "^3.30",
-        "symfony/event-dispatcher": "^4.0"
+        "symfony/event-dispatcher": "^4.0",
+        "symfony/cache": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2@dev",
