--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "martinhej/robocloud",
     "description": "Robocloud extension of AWS SDK for PHP for use with Kinesis and DynamoDB",
     "type": "library",
+    "license": "Apache License 2.0",
     "require": {
         "php": "^7.1.3",
         "aws/aws-sdk-php": "^3.30",
